--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>This is Anurag R!</title>
     <!--  ==================   CSS EXTERNAL LINK  ================  -->
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:wght@200;300;400;500;600;700&display=swap">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="./images/favicon.png" type="image/png">
     <link rel="stylesheet" href="./css/style-switcher.css">
