added resume ans whatsapp link

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                                 </div>
                                 <div class="row">
                                      <div class="buttons padd-15">
-                                        <a href="#" class="btn">Download Resume</a>
-                                        <a href="#" class="btn hire-me">Contact Me</a>
+                                        <a href="https://drive.google.com/file/d/1CZgnq1UO6v3kXtUp60dRg85BW3leP12_/view?usp=sharing" class="btn">Download Resume</a>
+                                        <a href="https://wa.me/9645111391?text=Hello" class="btn hire-me">Whatsapp Me</a>
                                      </div>
                                 </div>
                             </div>
