profile photo and styles updated

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./css/style-switcher.css">
 </head>
 
-<body class="dark">
+<body class="day">
     <!-- ===========         main container start      =========================    -->
     <div class="main-container">
         <!--        aside start           -->
@@ -96,7 +96,6 @@
                                     web developer. 
                                     i'm skilled with many web technologies and Currently focued on Python Django. 
                                     <br/>
-                                    <em><strong>Currently working on a company.</strong> </em> </p>
                             </div>
                         </div> 
                         <div class="row">
